Fixed: Middle column stripe list – The first one has the wrong size font. The one below that is correct.

--- a/css/altres.css
+++ b/css/altres.css
@@ -130,7 +130,7 @@ h4 {
 	clear: left;
 }
 
-#content p, #content ul {
+#content p, #content ul, #content table {
 	font-size: 12px;
 	line-height: 1.6em;
 	margin: 12px 0;
@@ -384,7 +384,7 @@ ul li p {
 .content h3 {
 	margin-bottom: 14px;
 	font-weight: 500;
-	font-size: 1.1em;
+	font-size: 16px;
 	line-height: 1.3em;
 }
 
@@ -848,7 +848,7 @@ div.title {
 }
 
 .caption {
-	font-size: 0.8em;
+	font-size: 10px;
 	font-style: italic;
 }
 
@@ -971,7 +971,7 @@ table.zebra td.even {
 
 blockquote {
 	font-style: italic;
-	font-size: 110%;
+	font-size: 15px;
 	background-image: url(../images/lquote.png);
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
@@ -1012,7 +1012,6 @@ blockquote.align-left {
 
 #main .block-menu_block ul li {
 	margin: 0;
-	font-size: 100%;
 	line-height: 1.5em;
 }
 
@@ -1022,7 +1021,7 @@ blockquote.align-left {
 
 #main .block-menu_block .menu a.active {
 	font-weight: 700;
-	font-size: 110%;
+	font-size: 14px;
 	color: #000000;
 }
 
@@ -1045,7 +1044,7 @@ blockquote.align-left {
 	top: 5px;
 	width: 75px;
 	margin: 0px;
-	font-size: 0.8em;
+	font-size: 11px;
 	font-weight: 900;
 }
 
@@ -1088,7 +1087,7 @@ blockquote.align-left {
 	text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
-	font-size: 0.7em;
+	font-size: 10px;
 }
 
 .sidebar .hr-center {
@@ -1143,19 +1142,15 @@ blockquote.align-left {
 
 #main .right-col h2, #main .left-col h2 {
 	margin-top: 10px;
-	font-size: 1.5em;
+	font-size: 13px;
 	font-weight: 300;
 }
 
 
 /* HEADERS */
 
-.sidebar h2 {
-	font-size: 1.2em;
-}
 
 .sidebar h3 {
-	font-size: 1em;
 	font-weight: bold;
 }
 
@@ -1174,7 +1169,7 @@ blockquote.align-left {
 
 .field-field-video-caption {
 	text-align: center;
-	font-size: 0.9em;
+	font-size: 12px;
 }
 
 
@@ -1217,7 +1212,7 @@ blockquote.align-left {
 
 .view-video-showcase .views-slideshow-controls-bottom .views-field-title, .view-video-showcase .views-slideshow-controls-bottom .views-field-field-video-duration {
 	width: 110px;
-	font-size: 80%;
+	font-size: 11px;
 	float: right;
 }
 
